feat: Add initial iOS project structure with LaunchScreen and Main storyboard
- Created LaunchScreen.storyboard for app launch interface with a splash image.
- Added Main.storyboard for the main app interface using Capacitor's BridgeViewController.
- Configured Info.plist with app metadata, including launch and main storyboard references.
- Introduced .gitignore for SPM dependencies and build artifacts.
- Added Package.swift for managing SPM dependencies, specifically Capacitor.
- Included README.md for SPM directory with usage instructions.
- Implemented export utilities for generating CSV reports, including payroll and attendance data formatting.
- Added app icons and manifest.json for PWA support with required icon sizes and descriptions.
- Created SQL migration script to add payroll allowances and rates, including new columns and a payroll_rates table.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "mines-payroll",
+  "version": "1.0.0",
   "private": true,
+  "description": "MI-NES Payroll System - Staff attendance and payroll management",
+  "author": "NES Solution & Network Sdn Bhd",
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
+    "build": "next build",
+    "build:mobile": "next build",
+    "start": "next start",
     "lint": "eslint .",
-    "start": "next start"
+    "cap:init": "npx cap init \"MI-NES Payroll\" com.mines.payroll",
+    "cap:add:android": "npx cap add android",
+    "cap:add:ios": "npx cap add ios",
+    "cap:sync": "npx cap sync",
+    "cap:open:android": "npx cap open android",
+    "cap:open:ios": "npx cap open ios",
+    "cap:run:android": "npx cap run android",
+    "cap:run:ios": "npx cap run ios",
+    "mobile:build": "npm run build:mobile && npx cap sync",
+    "mobile:android": "npm run mobile:build && npx cap open android",
+    "mobile:ios": "npm run mobile:build && npx cap open ios"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.0",
+    "@capacitor/cli": "^8.0.0",
+    "@capacitor/core": "^8.0.0",
+    "@capacitor/ios": "^8.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
