--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#0d6efd",
   "icons": [
     {
-      "src": "assets/logos/nes.jpg",
+      "src": "assets/logos/mi-nes-logo.jpg",
       "sizes": "192x192",
       "type": "image/jpeg"
     },
     {
-      "src": "assets/logos/nes.jpg",
+      "src": "assets/logos/mi-nes-logo.jpg",
       "sizes": "512x512",
       "type": "image/jpeg"
     }
